# lead_generator

./: README.md  app.py  pyproject.toml
templates/: index.html
utils/: exporter.py  scraper.py
