[tool.poetry]
name = "lead-generator"
version = "0.1.0"
description = "AI-powered lead generation tool"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.12.0"
webdriver-manager = "^4.0.1"
openpyxl = "^3.1.2"
fpdf = "^1.7.2"
vobject = "^0.9.6.1"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
pdfplumber = "^0.11.0"
pypdf2 = "^3.0.1"
urllib3 = "^2.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backpack = "poetry.core.masonry.api"